# sd-bus-monitor

./: .gitmodules  CMakeLists.txt
source/: main.cpp  svcmon.cpp  svcmon.h
